versions/1.17/README.md
# froggyOS Documentation
FroggyOS is a CLI-based programming operating system that is designed to be simple and easy to use. It is built using HTML, CSS, and JavaScript. It was created to be a fun and educational way to introduce beginners to CLI-based operating systems, as opposed to GUI-based operating systems, like Windows.
## General Information
* In paths, `.` will be replaced with the current directory.
* Programs can *only* be written in designated directories.
* You can press the `CTRL+C` keys to stop a running program.
* If a FroggyScript program exits with an error, the command `[[BULLFROG]]gotoprogramline [program] [line with error]` will be put into your command history.
* File types are inferred based on file location.
* For whatever reason, if there is no typeable line in the terminal, press `SHIFT + ENTER` to create a typeable line.
* Holding shift while scrolling will allow you to scroll faster.
### Paths
Paths have three parts, the drive, the directory, and the file name.
```
┌───────────Full Path──────────┐
├─────Location─────┐           │
[drive]:/[directory]/[file name]
```
## Aliases
* changelanguage -> lang
* clear -> cl
* clearstate -> cls
* croak -> c
* croakdir -> cdir
* exportfile -> xf
* formattime -> ft
* hatch -> ch
* help -> ?
* hop -> h
* list -> ls
* listdrives -> ld
* loadstate -> lds
* macro -> /
* meta -> m
* metaprop -> mp
* opendocumentation -> docs
* savestate -> svs
* spawn -> s
* swimto -> st

## File Types
There are no defined file types in froggyOS. Instead, file types are determined by the location of the file.
- `D:/Programs` - executable programs
    - edit the `allowedProgramDirectories` key in the user file to allow more directories to hold programs
- `D:/Macros` - macro files
- `D:/Palettes` - color palette files
- `D:/Spinners` - spinner files
- `Config:/langs` - language files

## Translating froggyOS into Different Languages
* The `ldm` file in the `Config:/langs` directory is what holds the indexes for translation. **Do not edit this file unless you know what you are doing.**
    * Languages file names are 3 letter abbreviations of the language name.
* To add a new language, clone the `ldm`, or `language descriptor map` file, which contains **translation descriptors** (prefixed with `T_`), which give you an idea of what the intended meaning of the text.
* Set the language to `ldm` to see which translation descriptors are used where in froggyOS. If there are missing translation descriptors at the end of a file, the English translation will be used.
    * If a language file does not meet requirements (valid name declaration, correct file length), it will be invalid and unable to be used.
* The **name declaration** must be the first line of the file, and must be in the format `!LANGNAME: [language name]`. For example, the name declaration for the `eng` file is `!LANGNAME: English`.
* If the default language is invalid, froggyOS will automatically revert to the `ldm` language file.
* If a text results in `Descriptor Missing! -> [translation descriptor]`, this means that the translation descriptor is missing from the language file.
* Descriptors can have **inclusions**. Inclusions are defined by wrapping text in `{{}}`, and allow translations to have dynamic text. Examples:
```txt
Successes:
descriptor = T_test {{}} {{}}
text       = This is a test message with {{}} and {{}}.
usage      = T_test {{one}} {{two}}
result     = This is a test message with one and two.

descriptor = T_test {{}} {{}}
text       = This is a test message with {{}}.
usage      = T_test {{one}}
result     = This is a test message with one.

Errors:
descriptor = T_test {{}} {{}}
text       = This is a test message with {{}} and {{}}.
usage      = T_test {{one}}
result     = Descriptor Missing! -> T_test {{}}

descriptor = T_test {{}}
text       = This is a test message with {{}} and {{}}.
usage      = T_test {{one}} {{two}}
result     = Descriptor Missing! -> T_test {{}} {{}}
```

## Command Help
### formattime
The all instances of the following characters (or character sequences) will be replaced with their respective values. Place a `!` before the character to escape it. If you want to put a character next to a formatting character, place the `!` *after* the formatting character.
```
d -> 5
dd -> dd
!dd -> d5
d!d -> 5d
```
#### Date
* year
    * `Y` - year (2025)
    * `y` - year short (25)
* month
    * `mn` - month number (01, 02)
    * `mnu` - month number unpadded (1, 2)
    * `ms` - month short (Jan, Feb)
    * `M` - month long (January, February)
* day
    * `d` - day (01, 02)
    * `du` - day unpadded (1, 2)
    * `D` - ordinal day (1st, 2nd) (English only)
* weekday
    * `w` - short weekday (Mon, Tue)
    * `W` - long weekday (Monday, Tuesday)

#### Time
* hour
    * `h` - 24 hour (00, 01, ... 22, 23)
    * `hu` - 24 hour unpadded (0, 1, ... 22, 23)
    * `H` - 12 hour (01, 02, ... 11, 12)
    * `Hu` - 12 hour unpadded (1, 2, ... 11, 12)
* minute
    * `m` - minute (00, 01)
    * `mu` - minute unpadded (0, 1)
* second
    * `s` - second (00, 01)
    * `su` - second unpadded (0, 1)
* millisecond
    * `l` - millisecond (000, 001)
    * `lu` - millisecond unpadded (0, 1)
* `a` - AM/PM
* timezone
    * `z` - timezone abbreviation (PST, EST)
    * `Z` - ISO 8601 timezone offset (+00:00, -05:00)

### hop
* `hop ~` will take you to the root directory of the current drive
* `hop -` will take you to the previous directory

### metaprop
Properties:
* read - If this file can be read. This includes being able to run the program or list file contents with the `spy` command.
    * when a file is cloned, this property will be set to `true`.
* write - If this file can be written to. This includes being able to edit the file or delete it.
    * when a file is cloned, this property will be set to `true`.
* hidden - If this file is hidden. This will prevent the file from being acted upon (for example, it cannot be edited).
* transparent - This file will not show in the directory or in lists, but can be acted upon (for example, can be edited).
    * when a file is cloned, this property will be set to `false`.

### pulse
The `pulse` command outputs system diagnostics information. It has 5 main sections:
1. System Information
    * uptime
    * version
    * file system size
    * current program session
    * current language
    * current color palette
2. Governors
    * tracks governor activity
    * see more in [Technical Information](#governors)
    * this section will also show any [troubles](#troubles) detected.
3. Config Read/Write Metrics
    * tracks config read and write operations
4. File Read Metrics
    * tracks file read operations
    * If a file is highlighted in red, that means it has been deleted
5. File Write Metrics
    * tracks file write operations
    * If a file is highlighted in red, that means it has been deleted

Note:
* Last: number of operations in the last second
* Avg: average number of operations per second since startup
* Total: total number of operations since startup

## Macros
* Macros are written in the `D:/Macros` directory
* each line in a macro file is a command that will be executed
* to add an alias to a macro, the **first line must** be `![alias]`. You can add only one alias per macro.
* to use file arguments inside of a macro, use `$[file argument number]` (ex. `$1`)

## Settings Directory
If you edit the `Settings:` drive directly, some settings won't apply until you reload the froggyOS state. An easy way to do this would be to run the `reload` macro.

## Trusting Programs
To trust a program, you must add its file name in the `D:/trusted_programs` file. This will allow the program to have extended control over the operating system. This must be done **manually** and cannot be done through a program.

## froggyOS Structured Data Storage (fSDS)
fSDS is a way to store key-value pairs in a file. A value can be one of four types: `String`, `Number`, or `Array`. fSDS is most prominently used to store file data in the `Config:/program_data` directory, but may be used in other places as well. You cannot store arrays inside of arrays.
### Non-Array
```
KEY [key name] TYPE [type (String/Number)] VALUE [value] END

KEY name TYPE String VALUE Alice END
KEY age TYPE Number VALUE 25 END
```
### Array
```
KEY [key name] TYPE Array START
0 TYPE [type (String/Number)] VALUE [value]
1 TYPE [type (String/Number)] VALUE [value]
(...)
KEY [key name] TYPE Array END

KEY favoriteColors TYPE Array START
0 TYPE String VALUE Blue
1 TYPE String VALUE Green
2 TYPE String VALUE Red
KEY favoriteColors TYPE Array END
```

## User file
The user file is located at `Config:/user`. It holds user-specific settings. Here is the default file contents, written in fSDS format:
```
KEY language TYPE String VALUE eng END
KEY colorPalette TYPE String VALUE standard END
KEY version TYPE String VALUE 1.17-indev END
KEY showSpinner TYPE Boolean VALUE false END
KEY currentSpinner TYPE String VALUE default END
KEY defaultSpinner TYPE String VALUE default END
KEY timeFormat TYPE String VALUE w. y/mn/d h:m:s END
KEY updateStatBar TYPE Boolean VALUE true END
KEY allowedProgramDirectories TYPE Array START
0 TYPE String VALUE D:/Programs
KEY allowedProgramDirectories TYPE Array END
KEY dissallowSubdirectoriesIn TYPE Array START
0 TYPE String VALUE D:/Programs
1 TYPE String VALUE D:/Macros
2 TYPE String VALUE D:/Program-Data
3 TYPE String VALUE D:/Palettes
4 TYPE String VALUE D:/Spinners
KEY dissallowSubdirectoriesIn TYPE Array END
KEY validateLanguageOnStartup TYPE Boolean VALUE true END
```

## Lilypad keybinds
Lilypad is the text editor in froggyOS. It has keybinds that you can use to make editing easier.
### Saving
* `ESC` - save and exit
* `SHIFT + ESC` - exit without saving

### Navigation
* `ArrowUp` - move cursor up one line
* `ArrowDown` - move cursor down one line

* `Shift + ArrowUp` - move cursor to end of previous line
* `Shift + ArrowDown` - move cursor to end of next line

* `CTRL + ArrowUp` - Move to first line
* `CTRL + ArrowDown` - Move to last line

* `ALT + ArrowUp` - Move current line up one line
* `ALT + ArrowDown` - Move current line down one line

* `CTRL + ArrowLeft` - Move to beginning of current line
* `CTRL + ArrowRight` - Move to end of current line

### Selection
* `Shift + ArrowLeft` - select one character to the left
* `Shift + ArrowRight` - select one character to the right

* `CTRL + Shift + ArrowLeft` - select one word to the left
* `CTRL + Shift + ArrowRight` - select one word to the right

* `CTRL + A` - select all text on the current line
### Creation
* `Enter` - insert a new line at the current cursor position
* `Shift + Enter` - create a new line below the current line
* `DEL` - delete current line
### Other
* `CTRL + C` - copy selected text
* `CTRL + X` - cut selected text
* `CTRL + V` - paste text from clipboard


## Color Palette Conventions
There are no set colors that you must have, but these are the color conventions.
* `00` - black
* `01` - blue
* `02` - green
* `03` - cyan
* `04` - red
* `05` - magenta
* `06` - orange/brown
* `07` - light grey
* `08` - dark grey
* `09` - light blue
* `10` - light green
* `11` - light cyan
* `12` - light red
* `13` - light magenta
* `14` - light orange/yellow
* `15` - white

## Error Colors
* Alert - `03`
* Warning - `13`
* Error - `12`
* Important Warning - `05`
* Important Error - `06`
* Critial Error - `04`
* Fatal Error - `08`

### Current Color Palettes
* standard
* revised
* cherry
* swamp
* swamp-revised
* neon

## Recovery Mode
Recovery mode is a special mode in froggyOS that allows you to fix issues with the operating system. To enter recovery mode, run the command `[[BULLFROG]]recoverymode`. In recovery mode, you can run the following commands:
* `regenlangfiles` - Regenerates language files.
* `clearstate` - Clears the autoload state.
* `regenuserfile` - Regenerates the user file.
* `regentrustedprogramfile` - Regenerates the trusted programs file.
* `regenconfigdir` - Regenerates the config directory.
* `regenkey [key]` - Regenerates a specific key in the user file.
* `unhalt [governor]` - Unhalts a specific governor.
* `exit` - Exits recovery mode only if all governors are not troubled.
* `help` - Lists all available recovery mode commands.

# Technical Information
## Governors
Governors are intervals that run at set times to manage system resources. There are five governors in froggyOS:
1. diagnostics
2. integrity
3. trusted-programs
4. config
5. date-time

### diagnostics
The diagnostics governor runs every second. It tracks file read and write operations, as well as config read and write operations. It keeps track of the number of operations in the last second, the average number of operations per second since startup, and the total number of operations since startup. It is the main driver of the `pulse` command.
Also, it handles the resizing of the terminal.
### integrity
The integrity governor runs every second. It checks the integrity of the froggyOS installation by checking for the existence of important files and directories. If any important files or directories are missing, it registers a trouble.
### trusted-programs
The trusted-programs governor runs every 100 milliseconds. It checks the list of trusted programs in the `D:/trusted_programs` file and updates the trusted status of programs accordingly.
### config
The config governor runs every 250 milliseconds. It updates the user config and program list.
### date-time
The date-time governor runs every 100 milliseconds. It updates the date and time in the stat bar, as well as the spinner in the top right corner.
## Troubles
Troubles are issues with governors that are shown inside of the `pulse` command. Current troubles:
| Short name | Long name | Description |
|------------|-----------|-------------|
| `tpfm` | Trusted programs file missing | The trusted programs file is missing |
| `buc/mk-(key)` | Bad user config missing key (key) | The user config file is missing the key (key) |
| `buc/fe` | bad user config fsds error | The user config file has an fSDS parsing error |
| `buc/gone` | bad user config gone | The user config file is missing |
| `integ/nldm` | No language descriptor map | The language descriptor map file is missing |
| `halt` | Halted | The governor has been halted by the user |

## Startup Sequence
1. Load any state if it exists from `localStorage`
2. Get the user config from `Config:/user`
3. Set the program list
4. Update date and time
5. Change the color palette
6. Create the color palette bar
7. Set trusted files    
8. Validate current language
Along with the startup sequence, there are two intervals, `configInterval` and `dateTimeInterval`. The `configInterval` updates the user config and program list every 250 milliseconds, while the `dateTimeInterval` updates the date and time every 100 milliseconds.
# FroggyScript
FroggyScript is a programming language used in froggyOS. Documentation [here](https://rus1130.github.io/projects/mdparser.html?toc=true&url=https://froggyos.github.io/versions/1.17/docs/froggyscript3.md).
# Other
If you have any questions, comments, or suggestions, email `froggyoscom+other@gmail.com`. If you have any concerns or found a bug, [open an issue on the GitHub repository](https://github.com/froggyos/froggyos.github.io/issues).